fix the logic of recmemded products